[metadata]
name = gerrit_checks_mock_fetch_endpoint
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alonbl/gerrit-checks-mock
author = Alon Bar-Lev
author_email = alon.barlev@gmail.com
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires > = 3.9
setup_requires =
    setuptools

[options.extras_require]
dev =
    mypy
    pre-commit
    pylint
    pytest

[options.package_data]
gerrit_checks_mock_fetch_endpoint =
    py.typed

[egg_info]
tag_date = 0

[flake8]
max-line-length = 120
